@@ -527,6 +527,10 @@ if (isset($_POST['message'])) {
             if ($queue['newmessagesubject'] && $queue['newmessagebody']) {
                 $message['customernotify'] = 1;
             }
+            $aet = ConfigHelper::getConfig('rt.allow_modify_resolved_tickets_newer_than', 86400);
+            if ($message['state'] == RT_RESOLVED && !ConfigHelper::checkPrivilege('superuser') && $aet && (time() - $message['resolvetime'] > $aet)) {
+                die("Cannot send message - ticket was resolved more than " . $aet . " seconds.");
+            }
         }
         $message['category_change'] = 0;
         if (ConfigHelper::checkConfig('phpui.helpdesk_notify')) {
