@@ -351,8 +351,11 @@ if (isset($_GET['action'])) {
     }
 }
 
+$aet = ConfigHelper::getConfig('rt.allow_modify_resolved_tickets_newer_than', 86400);
+
 $SESSION->remove('backid');
 
+$SMARTY->assign('aet', $aet);
 $SMARTY->assign('pagination', $pagination);
 $SMARTY->assign('queues', $queues);
 $SMARTY->assign('projects', $projects);
