@@ -104,10 +104,10 @@
 			{if $ticket.state != $smarty.const.RT_RESOLVED}
 				{button type="link" icon="add" class="ticket-add-event" tip="Add event assigned to ticket" href="?m=eventadd&ticketid={$ticket.id}"}
 			{/if}
-			{if !$ticket.ownerid && Auth::GetCurrentUser() !== $ticket.verifierid}
+			{if !$ticket.ownerid && Auth::GetCurrentUser() != $ticket.verifierid}
 				{button type="link" icon="owner" class="ticket-assign-to-me" tip="Assign to me as owner" href="?m=rtqueueview&ticketid={$ticket.id}&action=assign"}
 			{/if}
-			{if !$ticket.verifierid && Auth::GetCurrentUser() !== $ticket.ownerid}
+			{if ($ticket.state != $smarty.const.RT_RESOLVED && !$ticket.verifierid && Auth::GetCurrentUser() != $ticket.ownerid)}
 				{button type="link" icon="verifier" class="ticket-assign2-to-me" tip="Assign to me as verifier" href="?m=rtqueueview&ticketid={$ticket.id}&action=assign2"}
 			{/if}
 			{button type="link" icon="print" class="ticket-print" tip="Print" href="?m=rtticketprint&id={$ticket.id}"}
@@ -118,9 +118,14 @@
 			{else}
 				{button type="link" icon="delete" href="?m=rtticketdel&id={$ticket.id}&taction=delete" tip="Delete"}
 			{/if}
-			{button type="link" icon="edit" href="?m=rtticketedit&id={$ticket.id}" tip="Edit"}
+
+			{if ($ticket.state != $smarty.const.RT_RESOLVED || ($ticket.state == $smarty.const.RT_RESOLVED && $aet && ($smarty.now - $ticket.resolvetime) < $aet)) || (ConfigHelper::checkPrivilege('superuser'))}
+				{button type="link" icon="edit" href="?m=rtticketedit&id={$ticket.id}" tip="Edit"}
+			{/if}
 			{button type="link" icon="note" href="?m=rtnoteadd&ticketid={$ticket.id}" tip="New Note"}
-			{button type="link" icon="message" href="?m=rtmessageadd&ticketid={$ticket.id}" tip="New Message"}
+			{if ($ticket.state != $smarty.const.RT_RESOLVED || ($ticket.state == $smarty.const.RT_RESOLVED && $aet && ($smarty.now - $ticket.resolvetime) < $aet)) || (ConfigHelper::checkPrivilege('superuser'))}
+				{button type="link" icon="message" href="?m=rtmessageadd&ticketid={$ticket.id}" tip="New Message"}
+			{/if}
 			{button type="link" icon="info" href="?m=rtticketview&id={$ticket.id}" tip="Info"}
 		{/buttons}
 		<input type="checkbox" class="lms-ui-multi-check" name="ticketid[]" value="{$ticket.id}">
