@@ -119,10 +119,10 @@
 	{/if}
 	<TR>
 		<TD colspan="2" class="lms-ui-box-buttons">
-		{if $event.ticket.state != $smarty.const.RT_RESOLVED}
+		{if ($event.ticket.state != $smarty.const.RT_RESOLVED || ($event.ticket.state == $smarty.const.RT_RESOLVED && $aet && ($smarty.now - $event.ticket.resolvetime) < $aet)) || (ConfigHelper::checkPrivilege('superuser'))}
 			{button type="link-button" icon="message" label="New Message" href="?m=rtmessageadd&ticketid={$ticket.ticketid}"}
-			{button type="link-button" icon="note" label="New Note" href="?m=rtnoteadd&ticketid={$ticket.ticketid}"}
 		{/if}
+		{button type="link-button" icon="note" label="New Note" href="?m=rtnoteadd&ticketid={$ticket.ticketid}"}
 		</TD>
 	</TR>
 	</TBODY>
