@@ -80,6 +80,8 @@ version 26-git (????-??-??):
     part of system [chilan]
   - improvement: added 'phpui.send_message_confirm_threshold' configuration variable which control
     how many potential message recipients trigger confirmation dialog ('50' by default) [milek]
+  - enhancement: configuration variable 'rt.allow_modify_resolved_tickets_newer_than' allows
+    to prevent old ticket re-open (default '86400') [interduo]
 
 version 25.0 (2020-05-15):
 
